[tool.poetry]
name = "erd-mesh"
version = "0.1.0"
description = ""
authors = ["ivan <ivan@eriad.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
